--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="sub-section">
             <h3>Full Stack Engineer, WISK</h3>
-            <p>Location: Canada<br>Period: 2023 - Present</p>
+            <p>Location: Canada<br>Period: 2023 - 2023</p>
             <p>Revolutionized the Hospitality Sector with the Food & Beverage Intelligence Platform, utilizing Swift,
                 TypeScript, and more.</p>
         </div>
@@ -90,7 +90,7 @@
         <h2>Education</h2>
         <div class="sub-section">
             <h3>Instituto Federal de Educação, Ciência e Tecnologia do Ceará</h3>
-            <p>Degree: Bacharelado em Engenharia de Computação<br>Period: 2014 - 2020</p>
+            <p>Degree: Computer Engineering<br>Period: 2014 - 2020</p>
         </div>
     </div>
 
@@ -99,7 +99,7 @@
         <p>Languages: Rust, Python, Swift, Dart</p>
         <p>Frameworks/Technologies: ReSwift, RxSwift, WebAssembly, Node.js</p>
         <p>Tools: Google Apps Script</p>
-        <p>Languages: Professional working proficiency in Alemão (German) and native proficiency in Inglês (English).
+        <p>Languages: Professional working proficiency in German and native proficiency in English and Portuguese.
         </p>
     </div>
 
