Add previous roles

--- a/index.html
+++ b/index.html
@@ -84,6 +84,25 @@
             <p>Period: 2020 - 2021</p>
             <p>Empowered development of scalable feeds, activity streams, and chat solutions.</p>
         </div>
+
+        <div class="sub-section">
+            <h3>Developer Relations Engineer, Virgil Security</h3>
+            <p>Period: 2019 - 2020</p>
+            <p>Implemented DevRel practices and culture, as well as helped developers and founders on a daily basis build secure solutions that need to comply with HIPAA and GDPR.</p>
+        </div>
+
+        <div class="sub-section">
+            <h3>iOS Engineer, Rocket.Chat</h3>
+            <p>Period: 2017 - 2019</p>
+            <p>Implemented DevRel practices and culture, as well as helped developers and founders on a daily basis build secure
+                solutions that need to comply with HIPAA and GDPR.</p>
+        </div>
+
+        <div class="sub-section">
+            <h3>iOS Engineer, Apple Developer Academy</h3>
+            <p>Period: 2016 - 2017</p>
+            <p>Designed and developed new Apps and back-end services for iOS, Apple TV and Apple Watch.</p>
+        </div>
     </div>
     <div class="section">
         <h2>Education</h2>
