--- a/index.html
+++ b/index.html
@@ -7,135 +7,69 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
         }
 
-        .contact-info a {
-            color: #0077B5;
+        h1 {
+            font-size: 24px;
+            margin-bottom: 0;
+        }
+
+        h2 {
+            font-size: 20px;
+            margin-top: 0;
+        }
+
+        h3 {
+            font-size: 18px;
+            margin-top: 0;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        strong {
+            font-weight: bold;
+        }
+
+        a {
+            color: #0000EE;
             text-decoration: none;
         }
 
-        h1,
-        h2 {
-            color: #333;
-        }
-
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .sub-section {
-            margin-left: 20px;
-            margin-top: 5px;
-        }
-
-        .sub-section h3 {
-            margin-bottom: 5px;
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 
 <body>
-    <h1>Matheus Cardoso</h1>
-    <div class="contact-info">
-        <p>Email: <a href="mailto:matheus@cardo.so">matheus@cardo.so</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/cardosodev" target="_blank">linkedin.com/in/cardosodev</a></p>
-        <p>GitHub: <a href="https://github.com/cardoso" target="_blank">github.com/cardoso</a></p>
-    </div>
-
-    <div class="section">
-        <h2>Profile</h2>
-        <p>Highly skilled Data Scientist and Full Stack Engineer with extensive experience in developing and advocating
-            for state-of-the-art technology solutions. Passionate about improving development experience and obsessed
-            with DevX, Matheus holds proven expertise in data analysis, software development across various stacks, and
-            data security.</p>
-    </div>
-
-    <div class="section">
-        <h2>Experience</h2>
-        <div class="sub-section">
-            <h3>Data Scientist, Security Scorecard</h3>
-            <p>Location: New York, NY, United States<br>Period: 2023 - Present</p>
-            <p>Led data-driven initiatives, significantly improving security metrics.</p>
-        </div>
-
-        <div class="sub-section">
-            <h3>Full Stack Engineer, WISK</h3>
-            <p>Location: Canada<br>Period: 2023 - 2023</p>
-            <p>Revolutionized the Hospitality Sector with the Food & Beverage Intelligence Platform, utilizing Swift,
-                TypeScript, and more.</p>
-        </div>
-
-        <div class="sub-section">
-            <h3>Member of the Board of Advisors, DevNetwork</h3>
-            <p>Period: 2022 - 2023</p>
-            <p>Counseled on strategic IT and software as a service (SaaS) developments.</p>
-        </div>
-
-        <div class="sub-section">
-            <h3>Senior Developer Advocate, Bitmovin</h3>
-            <p>Period: 2021 - 2023</p>
-            <p>Established and nurtured the official community platform, implementing significant DevRel improvements.
-            </p>
-        </div>
-
-        <div class="sub-section">
-            <h3>Developer Advocate, Stream</h3>
-            <p>Period: 2020 - 2021</p>
-            <p>Empowered development of scalable feeds, activity streams, and chat solutions.</p>
-        </div>
-
-        <div class="sub-section">
-            <h3>Developer Relations Engineer, Virgil Security</h3>
-            <p>Period: 2019 - 2020</p>
-            <p>Implemented DevRel practices and culture, as well as helped developers and founders on a daily basis build secure solutions that need to comply with HIPAA and GDPR.</p>
-        </div>
-
-        <div class="sub-section">
-            <h3>iOS Engineer, Rocket.Chat</h3>
-            <p>Period: 2017 - 2019</p>
-            <p>Implemented DevRel practices and culture, as well as helped developers and founders on a daily basis build secure
-                solutions that need to comply with HIPAA and GDPR.</p>
-        </div>
-
-        <div class="sub-section">
-            <h3>iOS Engineer, Apple Developer Academy</h3>
-            <p>Period: 2016 - 2017</p>
-            <p>Designed and developed new Apps and back-end services for iOS, Apple TV and Apple Watch.</p>
-        </div>
-    </div>
-    <div class="section">
-        <h2>Education</h2>
-        <div class="sub-section">
-            <h3>Instituto Federal de Educação, Ciência e Tecnologia do Ceará</h3>
-            <p>Degree: Computer Engineering<br>Period: 2014 - 2020</p>
-        </div>
-    </div>
-
-    <div class="section">
-        <h2>Skills</h2>
-        <p>Languages: Rust, Python, Swift, Dart</p>
-        <p>Frameworks/Technologies: ReSwift, RxSwift, WebAssembly, Node.js</p>
-        <p>Tools: Google Apps Script</p>
-        <p>Languages: Professional working proficiency in German and native proficiency in English and Portuguese.
-        </p>
-    </div>
-
-    <div class="section">
-        <h2>Achievements</h2>
-        <p>Contributor to prominent open-source projects including Rust's package manager (cargo) and WebAssembly's
-            component-model.</p>
-        <p>Led the development of ReduxMovieDB showcasing upcoming movies.</p>
-        <p>WWDC17 Scholarship Winner awarded by Apple in June 2017.</p>
-    </div>
-
-    <div class="section">
-        <h2>Volunteering</h2>
-        <div class="sub-section">
-            <h3>Summer of Code Admin & Mentor for iOS & Android Projects, Google</h3>
-            <p>Period: 2018 - 2019</p>
-        </div>
-    </div>
-</body>
+    <h1>Matheus Cardoso - Software Engineer</h1>
+    <ul><li><strong>Email:</strong> <a href="mailto:matheus@cardo.so">matheus@cardo.so</a></li><li><strong>GitHub:</strong> <a href="https://github.com/cardoso">cardoso</a></li><li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/cardosodev">cardosodev</a></li><li><strong>Twitter:</strong> <a href="https://twitter.com/cardosodev">cardosodev</a></li></ul>
+    <h2>Profile</h2>
+    <p>Highly skilled Developer Advocate and Full Stack Engineer with extensive experience in developing and advocating for state-of-the-art technology solutions.
+Passionate about improving development experience and obsessed with DevX, Matheus holds proven expertise in data analysis, software development across various stacks, and data security.
+He is a strong advocate for open-source software and has a proven track record of building and maintaining developer communities.
+</p>
+    <h2>Experience</h2><h3>Full Stack Engineer</h3>
+    <ul>
+        <li><strong>Company:</strong> SecurityScorecard</li><li><strong>Website:</strong> <a href="https://securityscorecard.com">https://securityscorecard.com</a></li><li><strong>Location:</strong> New York, NY</li><li><strong>Period:</strong> 2023 - Present</li><li>As a full stack engineer in the Sales Enablement department under the Marketing division, I built new automations to deliver value quickly to prospects, designed reports, assisted in customer meetings, and created demos to showcase cutting-edge threat research and intelligence offerings.</li></ul><h3>Senior Developer Advocate</h3>
+    <ul>
+        <li><strong>Company:</strong> Bitmovin</li><li><strong>Website:</strong> <a href="https://bitmovin.com">https://bitmovin.com</a></li><li><strong>Location:</strong> San Francisco, CA</li><li><strong>Period:</strong> 2021 - 2023</li><li>Under the solutions department, I built and launched the official community platform, I helped drive decisions that improve Developer Experience, built in integrations to facilitate the interface between developers and the company, as well as tightened the relationship between our partners.</li></ul><h3>Senior Developer Advocate</h3>
+    <ul>
+        <li><strong>Company:</strong> Stream</li><li><strong>Website:</strong> <a href="https://getstream.io">https://getstream.io</a></li><li><strong>Location:</strong> Boulder, CO</li><li><strong>Period:</strong> 2020 - 2021</li><li>I was responsible for building and maintaining the developer community, creating content, and providing technical support to developers using the Stream API. I also worked closely with the product team to provide feedback and help shape the product roadmap.</li></ul><h3>Developer Relations Engineer</h3>
+    <ul>
+        <li><strong>Company:</strong> Virgil Security</li><li><strong>Website:</strong> <a href="https://virgilsecurity.com">https://virgilsecurity.com</a></li><li><strong>Location:</strong> Manassas, VA</li><li><strong>Period:</strong> 2019 - 2020</li><li>I implemented DevRel practices and culture, as well as helped developers and founders on a daily basis build secure solutions that need to comply with HIPAA and GDPR.</li></ul><h3>iOS Engineer</h3>
+    <ul>
+        <li><strong>Company:</strong> Rocket.Chat</li><li><strong>Website:</strong> <a href="https://rocket.chat">https://rocket.chat</a></li><li><strong>Location:</strong> Porto Alegre, Brazil</li><li><strong>Period:</strong> 2017 - 2019</li><li>I was in charge of maintaining and developing new features for the iOS App in Swift and Objective-C, writing unit tests and managing Open Source contributions.</li></ul><h3>iOS Engineer</h3>
+    <ul>
+        <li><strong>Company:</strong> Apple Developer Academy</li><li><strong>Website:</strong> <a href="https://developer.apple.com/academies/">https://developer.apple.com/academies/</a></li><li><strong>Location:</strong> Fortaleza, Brazil</li><li><strong>Period:</strong> 2016 - 2017</li><li>I was in charge of developing new Apps and back-end services for iOS, Apple TV and Apple Watch.</li></ul></body>
 
 </html>
